# Calimero_X_ICP

./: Makefile
basic_setup/context/chat/tools/: script-chat.sh
docs/: README.md  blockchain_positioning.md  calimero.md  calimero_blockchain.md  calimero_config.md  calimero_node_init.md  calimero_pow_icp.md  calimero_todo.md  calimero_user_onboarding.md  consensus.md  consensus_comparison.md  ideas.md  layer_explanation.md  tauri_vs_miroctl.md
docs/applications/: application_functions.md
docs/meroctl/: commands.md
exp/: README.md  lib_old_ver.rs
exp/hello-icp/: README.md  script-icp.md  script-icp.sh  start.sh
exp/key_value_store/: Cargo.toml  build.sh
exp/key_value_store/src/: lib.rs
exp/key_value_store_context/: Cargo.toml  build.sh
exp/key_value_store_context/res/: key_value_store_context.wasm
exp/key_value_store_context/src/: lib.rs
exp/kv-store/: Cargo.toml  build.sh
exp/kv-store/docs/: event_macro.md  namespace.md
exp/kv-store/src/: lib.rs
exp/macros/: macro.rs  regular  regular.rs
src/app/chat/: Cargo.toml  build.sh
src/app/chat/res/: chat.wasm
src/app/chat/src/: lib.rs
src/app/mining/miner/: Cargo.toml  build.sh
src/app/mining_pool/: Cargo.toml  build.sh
src/app/mining_pool/res/: mining_pool.wasm
src/app/random/: Cargo.toml  build.sh
src/app/random/res/: quantum_rng.wasm
src/app/random/src/: lib.rs
src/backend/: deploy_devnet.sh  dfx.json  start.sh
src/backend/external_contract/: Cargo.toml  build.sh
src/backend/external_contract/res/: external_contract.wasm
src/backend/external_contract/src/: lib.rs
src/backend/proxy_contract/: Cargo.toml  build.sh  proxy_contract.did
src/frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/logic/res/: blockchain.wasm
tools/: deploy_devnet.sh  init_and_run_nodes.sh  setup_calimero_icp.sh  tools.md
(+10 files in other folders)
